# spark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  log.txt  main.cpp
lib/: CMakeLists.txt
lib/Glad/: CMakeLists.txt
lib/Glad/include/: glad.h
lib/Glad/src/: glad.c
lib/glad/: CMakeLists.txt
lib/imgui/: imgui.cpp  imgui.h
lib/imgui/examples/example_sdl_opengl3/: main.cpp
lib/imgui/examples/libs/usynergy/: uSynergy.h
projects/sandbox/: CMakeLists.txt
projects/sandbox/include/: sandbox.h  sandbox_layer.h
projects/sandbox/src/: sandbox.cpp  sandbox_layer.cpp
projects/sandbox/src/core/: sandbox.h
src/: CMakeLists.txt  main.cpp
src/ECS/Components/include/: component_manager_interface.h
src/ECS/Components/src/: component_manager.tpp  component_manager_collection.tpp
src/ECS/Entities/include/: entity_callback_type.h  entity_manager.h
src/ECS/Entities/src/: entity_manager.cpp  entity_manager_data.cpp  entity_manager_data.h  entity_manager_data.tpp
src/UtilityBox/Logger/src/: adapter.cpp
src/UtilityBox/Memory/include/: contiguous_pool_allocator.h
src/UtilityBox/Tools/: assert_dev.h
src/World/: world.cpp  world.h
src/core/: application.cpp  core.cpp  entry_point.cpp  layer.cpp  layer_stack.cpp  service_locator.cpp
src/ecs/components/: component_manager.tpp  component_manager_collection.tpp
src/ecs/entities/: entity_events.tpp  entity_manager.cpp  entity_manager.tpp  entity_manager_data.cpp  entity_manager_data.h  entity_manager_data.tpp
src/ecs/systems/: base_component_system.tpp
src/events/: application_events.cpp  event.cpp  event_hub.cpp  event_interactable.cpp  event_interactable.tpp  event_interactable_interface.tpp  event_listener.tpp  key_events.cpp  mouse_events.cpp  null_event_hub.cpp
src/graphics/context/: imgui_layer.cpp  imgui_overhead.cpp  rendering_api.cpp  rendering_context.cpp  window.cpp
src/graphics/renderer/: imgui_overhead.cpp  renderer_api.cpp  rendering_context.cpp  window.cpp
src/graphics/window/: window.cpp
src/platform/opengl/: opengl_imgui_layer.cpp  opengl_imgui_overhead.cpp  opengl_renderer_api.cpp  opengl_rendering_context.cpp  opengl_window.cpp
src/platform/opengl/renderer/: opengl_imgui_layer.cpp  opengl_index_buffer_object.cpp  opengl_renderer_api.cpp  opengl_rendering_context.cpp  opengl_shader.cpp  opengl_vertex_array_object.cpp  opengl_vertex_buffer_object.cpp
src/platform/opengl/window/: opengl_window.cpp
src/spark/: utility.cpp
src/spark/core/: application.cpp  entry_point.cpp  layer.cpp  layer_stack.cpp  service_locator.cpp  utility.cpp
src/spark/ecs/: utility.cpp
src/spark/ecs/components/types/: transform.cpp  transform_component.cpp
src/spark/ecs/entities/: entity_manager.cpp
src/spark/events/: event_hub.cpp  null_event_hub.cpp
src/spark/events/types/: application_events.cpp  ecs_events.cpp  event.cpp  key_events.cpp  mouse_events.cpp
src/spark/graphics/renderer/: imgui_layer.cpp  index_buffer_object.cpp  orthographic_camera.cpp  renderer_api.cpp  rendering_context.cpp  shader.cpp  shader_data_type.cpp  vertex_array_object.cpp  vertex_buffer_layout.cpp  vertex_buffer_object.cpp
src/spark/graphics/window/: window.cpp
src/spark/include/: spark_pch.h
src/spark/include/core/: configuration.h  entry_point.h  layer_stack.h
src/spark/include/ecs/components/: component_manager.h  component_manager.tpp  component_manager_collection.h  component_manager_collection.tpp
src/spark/include/ecs/entities/: entity_manager.h  entity_manager.tpp  entity_manager_data.h  entity_manager_data.tpp
src/spark/include/ecs/systems/: base_component_system.tpp  base_component_system_interface.h
src/spark/include/events/: event_hub.h  event_hub_private_interface.h  event_interactable_interface.tpp  event_listener.h  event_listener.tpp  event_listener_interface.h
src/spark/include/events/generators/: add_component_generator.h  on_event_function_generator.h
src/spark/include/events/types/: ecs_events.tpp
src/spark/include/utilitybox/logger/: invalid_format_character_exception.h  logger.h  logging_system.h
src/spark/include/utilitybox/memory/: contiguous_pool_allocator.h  memory_formatter.h  segmented_pool_allocator.h
src/spark/include/utilitybox/timing/: timestamp.h
src/spark/include/utilitybox/tools/: assert_dev.h
src/spark/job/: job.cpp  job_handle.cpp  job_handle_manager.cpp  job_system.cpp  worker.cpp  worker_pool.cpp
src/spark/job/types/: job.cpp
src/spark/job/worker/: work_stealing_queue.cpp  worker.cpp
src/spark/logger/: logger.cpp  timestamp.cpp
src/spark/logger/adapter/: adapter.cpp  adapter_configuration.cpp
src/spark/logger/adapter/types/: file_adapter.cpp  standard_output_adapter.cpp
src/spark/memory/: allocator.cpp  contiguous_pool_allocator.cpp  memory_formatter.cpp  object_handle.cpp  segmented_pool_allocator.cpp
src/spark/memory/allocators/: segmented_pool_allocator.cpp
src/spark/memory/resources/: segmented_pool_resource.cpp
src/spark/src/core/: application.cpp  entry_point.cpp  layer.cpp  layer_stack.cpp  service_locator.cpp
src/spark/src/ecs/entities/: entity_manager.cpp  entity_manager_data.cpp
src/spark/src/events/: event_hub.cpp  null_event_hub.cpp
src/spark/src/events/types/: application_events.cpp  event.cpp  key_events.cpp  mouse_events.cpp
src/spark/src/graphics/renderer/: imgui_layer.cpp  renderer_api.cpp  (+1 more)
src/spark/utilitybox/logger/: adapter.cpp  invalid_format_character_exception.cpp  logger.cpp  logging_interface.cpp  logging_system.cpp  timestamp.cpp
src/spark/utilitybox/memory/: contiguous_pool_allocator.cpp  memory_formatter.cpp  segmented_pool_allocator.cpp
src/spark/utilitybox/timing/: timestamp.cpp
src/utilitybox/logger/: adapter.cpp  adapter_config.cpp  invalid_format_character_exception.cpp  log_message.cpp  logger.cpp  logging_interface.cpp  logging_system.cpp  timestamp.cpp
src/utilitybox/memory/: contiguous_pool_allocator.cpp  memory_formatter.cpp  memory_formatter.h  segmented_pool_allocator.cpp
src/utilitybox/servicelocator/: service_locator.cpp
src/utilitybox/timing/: timestamp.cpp
(+293 files in other folders)
